[package]
name = "openssl2"
version = "0.1.0"
license = "MIT"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2018"


[dependencies]
foreign-types = "0.3"
openssl = "0.10"
openssl-sys = "0.9"

openssl-sys2 = { path = "../openssl-sys2/" }


[build-dependencies]
openssl-build = { path = "../openssl-build/" }
